--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,37 @@
     margin-top: 10px;
   }
 
+.feature-image {
+    width: 1200px;
+    height: 628px;
+    display: block;
+    margin: 20px auto;
+  }
+  
+  
+.image-description {
+    font-size: 14px;
+    font-style: italic;
+    color: #555;
+    margin-top: 10px;
+  }
+
+.graph{
+  width: 300px;
+  height: 200px;
+  display: block;
+  margin: 10px auto;
+}
+
+.graph-description {
+  font-size: 14px;
+    font-style: italic;
+    color: #555;
+    margin-top: 10px;
+
+}
+  
+
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
@@ -14,6 +45,12 @@ body {
   h1 {
     font-size: 24px;
     margin-bottom: 10px;
+  }
+
+  h2 {
+    font-size: small;
+    margin-top: 10px;
+    margin-bottom: 15px;
   }
   
   p {
